[package]
name = "frnsc-liveregistry-rs"
version = "0.2.1"
authors = ["Samuel Garcés Marín <samuel.garces@protonmail.com>"]
keywords = ["forensic", "windows", "parser", "registry", "cybersecurity"]
categories = ["parsing"]
description = "Implements RegistryReader from forensic-rs using the Windows API to access the registry of a live system."
license = "MIT"
edition = "2021"
repository = "https://github.com/ForensicRS/forensic-rs"

[dependencies]
forensic-rs = "0"


[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation", 
    "Win32_System_Registry"
]